Edited wiki page Feeds_v1 through web user interface.

--- a/wiki/Feeds_v1.wiki
+++ b/wiki/Feeds_v1.wiki
@@ -138,5 +138,5 @@ CIF has plugins to generate the following feeds:
  * cif -q domain/[https://github.com/collectiveintel/libcif-dbi/blob/v1/lib/CIF/Feed/Plugin/Domain.pm#L16 <assessment>] -c 85
  * cif -q email/[https://github.com/collectiveintel/libcif-dbi/blob/v1/lib/CIF/Feed/Plugin/Email.pm#L16 <assessment>] -c 85
  * cif -q infrastructure/[https://github.com/collectiveintel/libcif-dbi/blob/v1/lib/CIF/Feed/Plugin/Infrastructure.pm#L18 <assessment>] -c 85
- * [https://github.com/collectiveintel/libcif-dbi/blob/v1/lib/CIF/Feed/Plugin/Malware.pm#L16 malware/<assessment>]
- * [https://github.com/collectiveintel/libcif-dbi/blob/v1/lib/CIF/Feed/Plugin/Url.pm#L16 url/<assessment>]
+ * cif -q malware/[https://github.com/collectiveintel/libcif-dbi/blob/v1/lib/CIF/Feed/Plugin/Malware.pm#L16 <assessment>] -c 85
+ * cif -q  url/[https://github.com/collectiveintel/libcif-dbi/blob/v1/lib/CIF/Feed/Plugin/Url.pm#L16 <assessment>] -c 85
