--- a/wiki/Feeds_v1.wiki
+++ b/wiki/Feeds_v1.wiki
@@ -131,7 +131,7 @@ $ cif -q url/phishing -c 85 -p html
 
 = Advanced =
 
-The feeds documented above are the most common type of feeds used by the CIF community. CIF has the capability to generate the following feeds assuming it is [ServerInstall_v1#Enabling_Feed_Generation configured to do so] and it taking in data of the correct assessment. 
+The feeds documented above are the most common type of feeds used by the CIF community. CIF has the capability to generate the following feeds assuming it is [ServerInstall_v1#Enabling_Feed_Generation configured to do so] and it [AddingFeeds_v1 taking in data] of the correct assessment. 
 
 CIF has plugins to generate the following feeds:
 
