Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -9,8 +9,9 @@
   * [ThreatIntelligenceTools Threat Intelligence Tools]
  * (stable) [WhatisCIF v1]
   * [FAQ_v1 FAQ]
-   * [TaxonomyConfidence_v1 Confidence Definitions]
-   * [TaxonomyAssessment_v1 Assessment Definitions]
+   * [Taxonomy_v1 Taxonomy]
+    * [TaxonomyConfidence_v1 Confidence Definitions]
+    * [TaxonomyAssessment_v1 Assessment Definitions]
    * [Whitelist_v1 Whitelisting Definitions]
    * [Utilities_v1 Utilities]
    * [MigrateApikeys_v1 API key migration]
