Edited wiki page Taxonomy_v1 through web user interface.

--- a/wiki/Taxonomy_v1.wiki
+++ b/wiki/Taxonomy_v1.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-Throughout this framework, assessment, confidence, and severity are used to describe our observations. The combination of all three help to define how the data should be treated and what should be done operationally. These taxonomies are important in defining your risk tolerance and the balance between "false positives" and pre-emptive mitigation.
+Throughout this framework, assessment and confidence are used to describe our observations. The combination of these help to define how the data should be treated and what should be done operationally. These taxonomies are important in defining your risk tolerance and the balance between "false positives" and pre-emptive mitigation.
 
 = Details =
 
