--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -260,15 +260,15 @@ $ sudo make install
 == v1-1.0.0 ==
 <font color="red">TESTING, v1.0.1 not released yet</font>
 
-If you're upgrading from v1.0.0 you need to update a the Net::DNS::Match dependency.
+If you're upgrading from v1.0.0 you need to update a the Net::DNS::Match, LWPx::paranoidAgent and Iodef::Pb::Simple dependencies.
 
  # backup the old cif directory
 {{{
 $ sudo mv /opt/cif /opt/cif-v1.0.0
 }}}
- # update Net::DNS::Match
+ # update Net::DNS::Match, LWPx::paranoidAgent and Iodef::Pb::Simple
 {{{
-$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::DNS::Match'
+$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Iodef::Pb::Simple, Net::DNS::Match, LWPx::ParanoidAgent'
 }}}
  # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases release] (be sure to pick the green-highlighted pre-built package, not the 'source')
 {{{
