--- a/wiki/API_HTTP_v1.wiki
+++ b/wiki/API_HTTP_v1.wiki
@@ -34,6 +34,13 @@ GET https://cif.example.com/api?apikey=249cd5fd-04e3-46ad-bf0f-c02030cc864a
 
 == Queries ==
 The API uses the 'q' parameter to respond to queries:
+{{{
+GET https://cif.example.com/api?q=example.com
+
+GET https://cif.example.com/api?q=infrastructure/botnet
+
+GET https://cif.example.com/api?apikey=249cd5fd-04e3-46ad-bf0f-c02030cc864a&q=192.168.1.1/24
+}}}
 
 == Curl Examples ==
 
