--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -281,3 +281,30 @@ $ ./configure && make testdeps
 $ sudo make install
 }}}
  # restart apache [ServerInstall_v1#Router_Setup and test]
+
+== v1-1.0.2 ==
+<font color='red'>v1.0.2 IS NOT RELEASED YET, TESTING</font>
+ # backup the old cif directory
+{{{
+$ sudo mv /opt/cif /opt/cif-v1.back
+}}}
+ # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases release] (be sure to pick the green-highlighted pre-built package, not the 'source')
+{{{
+$ tar -xzvf cif-v1-1.X.X.tar.gz
+$ cd cif-v1-1.X.X
+$ ./configure && make testdeps
+}}}
+ # if 'make testdeps' succeeds, go a-head with the install, otherwise [ServerInstall_v1#Required_applications_and_dependencies walk through your OS/Disto guide for any missing libraries]
+ # finish with the install
+ # be sure to copy any custom .cfg's from /opt/cif-v1.0.0/etc to your new /opt/cif/etc directory
+{{{
+$ sudo make install
+}}}
+ # this upgrade requires the manual modification of one of the SQL tables
+{{{
+$ psql -U postgres -d cif
+cif=# ALTER TABLE search RENAME COLUMN hash TO term;
+cif=# ALTER TABLE search ALTER COLUMN term TYPE text;
+cif=# \q
+}}}
+ # restart apache [ServerInstall_v1#Router_Setup and test]
