--- a/wiki/ClientInstall_OSX8_v1.wiki
+++ b/wiki/ClientInstall_OSX8_v1.wiki
@@ -27,7 +27,7 @@ $ sudo port install perl5 p5-digest-sha p5-digest-sha1 p5-log-dispatch p5-list-m
 }}}
  # the perl OSSP::uuid bindings must be installed from source into /opt/local (for macports)
 {{{
-$ wget ftp://ftp.ossp.org/pkg/lib/uuid/uuid-1.6.2.tar.gz
+$ wget http://www.mirrorservice.org/sites/ftp.ossp.org/pkg/lib/uuid/uuid-1.6.2.tar.gz
 $ tar -zxvf uuid-1.6.2.tar.gz
 $ cd uuid-1.6.2
 }}}
