--- a/wiki/FAQ_v1.wiki
+++ b/wiki/FAQ_v1.wiki
@@ -29,7 +29,7 @@ See the [API_FeedTypes_v1 API]
 
 === When I try to pull a feed, no data is returned? ===
 ----
- 1. Ensure you are using valid [FeedTypes_v1 feed syntax]
+ 1. Ensure you are using valid [Feeds_v1 feed syntax]
  1. Ensure you have [ServerInstall_v1#Enabling_Feed_Generation enabled feed generation]
  1. Ensure you have [ServerInstall_v1#With_Feeds generated the first batch of feeds]
  1. Ensure you have enabled [ServerInstall_v1#Finishing_Up cif_feed in crontab]
