--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -312,3 +312,29 @@ cif=# ALTER TABLE search ALTER COLUMN term TYPE text;
 cif=# \q
 }}}
  # restart apache [ServerInstall_v1#Router_Setup and test]
+
+== v1-1.0.3 ==
+<font color="red">TESTING, TRY AT OWN RISK</font>
+
+ # <font color="red">if you're upgrading from a version older than 1.0.2, be sure to follow that upgrade first</font>
+ # backup the old cif directory
+{{{
+$ sudo mv /opt/cif /opt/cif-v1.back
+}}}
+ # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases/tag/v1.0.3-FINAL v1.0.3-FINAL] (be sure to pick the green-highlighted pre-built package, not the 'source')
+{{{
+$ tar -xzvf cif-v1-1.X.X.tar.gz
+$ cd cif-v1-1.X.X
+$ ./configure && make testdeps
+}}}
+ # if 'make testdeps' succeeds, go a-head with the install, otherwise [ServerInstall_v1#Required_applications_and_dependencies walk through your OS/Disto guide for any missing libraries]
+ # be sure Net::Abuse::Utils and Net::Abuse::Utils::Spamhaus is up to date:
+{{{
+$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::Abuse::Utils Net::Abuse::Utils::Spamhaus'
+}}}
+ # finish with the install
+ # be sure to copy any custom .cfg's from /opt/cif-v1.0.2/etc to your new /opt/cif/etc directory
+{{{
+$ sudo make install
+}}}
+ # restart apache [ServerInstall_v1#Router_Setup and test]
