Edited wiki page DnsSinkhole_v0 through web user interface.

--- a/wiki/DnsSinkhole_v0.wiki
+++ b/wiki/DnsSinkhole_v0.wiki
@@ -20,7 +20,7 @@ bindzone_path = /etc/bind/
   * example config
 {{{
 [client]
-host = https://ses.ren-isac.net:443/api
+host = https://example.com:443/api
 apikey = xx-xx-xx-xx-xx
 timeout = 60
 #verify_tls = 0
