--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -264,7 +264,7 @@ $ ./configure && make testdeps
  # if 'make testdeps' succeeds, go a-head with the install, otherwise [ServerInstall_v1#Required_applications_and_dependencies walk through your OS/Disto guide for any missing libraries]
  # be sure Net::Abuse::Utils and Net::Abuse::Utils::Spamhaus is up to date:
 {{{
-$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::Abuse::Utils Net::Abuse::Utils::Spamhaus'
+$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::DNS Net::Abuse::Utils Net::Abuse::Utils::Spamhaus'
 }}}
  # finish with the install
  # be sure to copy any custom .cfg's from /opt/cif-v1.0.2/etc to your new /opt/cif/etc directory
