--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -71,6 +71,7 @@ Choose the distribution you used as your base operating system and install the r
 *We do NOT support non 'LTS' type distro's, eg: release cycles less than 18months, Fedora, non-LTS ubuntu, etc...*
 
  * (stable) [ServerInstall_Ubuntu12_v1 Ubuntu 12 LTS] 
+ * (unstable) [ServerInstall_Ubuntu14_v1 Ubuntu 14 LTS]
  * (stable) [ServerInstall_DebianSqueeze_v1 Debian Squeeze (6)]
  * (stable) [ServerInstall_DebianWheezy_v1 Debian Wheezy (7)] 
  * (stable) [ServerInstall_CentOS6_v1 CentOS 6] 
