Edited wiki page ServerInstall_v1 through web user interface.

--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -228,7 +228,7 @@ feed_retention = 7
 }}}
  # generate a "role key" for generating feeds everyone (with an apikey) in the system can query for. They apikey generated can be ignored as it's just a placeholder for the system.
 {{{
-$ cif_apikeys -u role_everyone_feed -G everyone -g everyone -a
+$ cif_apikeys -u "role_everyone_feed" -G everyone -g everyone -a
 }}}
  # log out of the cif user and restart apache
 
@@ -239,7 +239,7 @@ $ sudo su - cif
 }}}
  # generate your initial apikey to be used by your client
 {{{
-$ cif_apikeys -u <myuser@example.com> -a -g everyone -G everyone
+$ cif_apikeys -u "<myuser@example.com>" -a -g everyone -G everyone
 userid              key                                  description guid                                 default_guid access write revoked expires created                      
 myuser@mydomain.com 249cd5fd-04e3-46ad-bf0f-c02030cc864a             8c864306-d21a-37b1-8705-746a786719bf true         all                          2012-08-01 11:50:15.969724+00
 }}}
